# profile-service/api/routes/profile.go
@@ -3,17 +3,16 @@ package routes
 import (
 	"profile-service/api/handlers"
 	"profile-service/api/middleware"
-	"profile-service/pkg/auth"
+	"profile-service/config"
 	"profile-service/pkg/user"
 
 	"github.com/gofiber/fiber/v2"
+	"github.com/spf13/viper"
 )
 
-func ProfileRouter(app fiber.Router, userservice user.Service, jm *auth.JWTManager) {
+func ProfileRouter(app fiber.Router, userservice user.Service, jwtManager *config.JWTManager, v *viper.Viper) {
 
-	app.Use(middleware.JWTProtected(jm))
-
-	profile := app.Group("/user")
+	profile := app.Group("/user", middleware.GatewayTrust(v))
 	profile.Get("", handlers.GetMe(userservice))
 	profile.Put("", handlers.UpdateProfile(userservice))
 
